--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div id="box"></div>
     <div id="logoContainer">
-        <a href="https://your-link-here.com">
+        <a href="https://github.com/SahibAbbas123/Hover-Rover">
             <img id="gitLogo" src="New Project (11).png" alt="Button Image" id="imageButton">
         </a>
     </div>
